--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
-matrix:
-  include:
-    - language: java
-    jdk: oraclejdk8
-    script:
-      - mvn spring-boot:run
-    before_script:
-      - cd ./server/
+language: java
+jdk: oraclejdk8
+script: mvn spring-boot:run
+before_script: cd ./server/
   
