--- a/server/src/main/resources/queries.properties
+++ b/server/src/main/resources/queries.properties
@@ -1,1 +1,3 @@
-select.measurement = SELECT measurement_id, temperature, pressure, measurement_time FROM weather_observer.measurement where measurement_id = ?
+select.measurement.last = SELECT measurement_id, temperature, pressure, measurement_time FROM weather_observer.measurement ORDER BY measurement_time DESC LIMIT 1
+insert.measurement = INSERT INTO weather_observer.measurement (temperature, pressure, measurement_time) VALUES (?, ?, ?)
+select.measurements.for.interval = SELECT measurement_id, temperature, pressure, measurement_time FROM weather_observer.measurement WHERE measurement_time > DATE_SUB(NOW(), INTERVAL ? HOUR);
