--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,9 @@ dist: trusty
 branches:
   only: master
 
-matrix:
-  include:
-    - language: java
-      jdk: oraclejdk8
-      script:
-        - mvn clean package
-      before_script:
-        - cd ./server/
+language: java
+jdk: oraclejdk8
+script: mvn clean package
+before_script: cd ./server/
 
-    - language: node_js
-      node_js: stable
-      install:
-        - npm install
-      before_install:
-        - cd ./front/
-      script:
-        - npm run build
 
