Add sample of testing and mocking

--- a/front/angular.json
+++ b/front/angular.json
@@ -51,6 +51,14 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -62,6 +70,10 @@
           "configurations": {
             "production": {
               "browserTarget": "weatherobserver:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "weatherobserver:build:hmr"
             }
           }
         },
@@ -131,5 +143,10 @@
       }
     }
   },
-  "defaultProject": "weatherobserver"
+  "defaultProject": "weatherobserver",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "less"
+    }
+  }
 }
