--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --port=4200 --proxy-config proxy.conf.json",
+    "dev": "ng serve --configuration hmr --open --port=4200 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,13 +27,19 @@
     "core-js": "^2.5.4",
     "npm": "^6.4.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@angular-redux/store": "^9.0.0",
+    "@angular-redux/router": "^9.0.0",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0-beta.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -45,7 +52,9 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-vivaldi-launcher": "0.0.1",
+    "less": "^3.8.0",
     "protractor": "~5.4.0",
+    "redux-logger": "^3.0.6",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
