--- a/front/angular.json
+++ b/front/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/base.scss"
             ],
             "scripts": []
           },
@@ -91,7 +91,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/assets/base.scss"
             ],
             "scripts": [],
             "assets": [
