--- a/front/package.json
+++ b/front/package.json
@@ -15,24 +15,27 @@
     "lint"
   ],
   "dependencies": {
+    "@angular-redux/router": "^9.0.0",
+    "@angular-redux/store": "^9.0.0",
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "~7.1.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.1.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "npm": "^6.4.1",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "@angular-redux/store": "^9.0.0",
-    "@angular-redux/router": "^9.0.0",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0-beta.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
