--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --open --port=4200 --proxy-config proxy.conf.json",
     "dev": "ng serve --configuration hmr --open --port=4200 --proxy-config proxy.conf.json",
+    "prod": "ng serve --configuration prod --open --port=4200 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -15,6 +16,7 @@
     "lint"
   ],
   "dependencies": {
+    "@amcharts/amcharts4": "^4.0.3",
     "@angular-redux/router": "^9.0.0",
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "~7.0.0",
