--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --open --port=4200 --proxy-config proxy.conf.json",
     "dev": "ng serve --configuration hmr --open --port=4200 --proxy-config proxy.conf.json",
-    "prod": "ng serve --configuration prod --open --port=4200 --proxy-config proxy.conf.json",
+    "prod": "ng serve --configuration production --open --port=4200 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
