--- a/server/src/main/resources/queries.properties
+++ b/server/src/main/resources/queries.properties
@@ -1,3 +1,3 @@
-select.measurement.last = SELECT measurement_id, temperature, pressure, measurement_time FROM weather_observer.measurement ORDER BY measurement_time DESC LIMIT 1
-select.measurements.for.interval = SELECT measurement_id, temperature, pressure, measurement_time FROM weather_observer.measurement WHERE measurement_time > DATE_SUB(NOW(), INTERVAL ? HOUR)
-insert.measurement = INSERT INTO weather_observer.measurement (temperature, pressure, measurement_time) VALUES (?, ?, ?)
+select.measurement.last = SELECT measurement_id, temperature, humidity, measurement_time FROM weather_observer.measurement ORDER BY measurement_time DESC LIMIT 1
+select.measurements.for.interval = SELECT measurement_id, temperature, humidity, measurement_time FROM weather_observer.measurement WHERE measurement_time > DATE_SUB(NOW(), INTERVAL ? HOUR)
+insert.measurement = INSERT INTO weather_observer.measurement (temperature, humidity, measurement_time) VALUES (?, ?, ?)
