Add little design

--- a/front/angular.json
+++ b/front/angular.json
@@ -146,7 +146,7 @@
   "defaultProject": "weatherobserver",
   "schematics": {
     "@schematics/angular:component": {
-      "styleext": "less"
+      "styleext": "sass"
     }
   }
 }
