--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.schema=classpath:/schema.sql
 
 spring.datasource.driver=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
