--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # Datasource configuration
 spring.datasource.schema=classpath:/schema.sql
 
-spring.datasource.driver=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
