Some fixes (desc order, don't do redirect, count average)

--- a/server/src/main/resources/queries.properties
+++ b/server/src/main/resources/queries.properties
@@ -1,3 +1,3 @@
 select.measurement.last = SELECT measurement_id, temperature, humidity, measurement_time FROM weather_observer.measurement ORDER BY measurement_time DESC LIMIT 1
-select.measurements.for.interval = SELECT measurement_id, temperature, humidity, measurement_time FROM weather_observer.measurement WHERE measurement_time > (NOW() - (? || ' HOUR')::INTERVAL)
+select.measurements.for.interval = SELECT measurement_id, temperature, humidity, measurement_time FROM weather_observer.measurement WHERE measurement_time > (NOW() - (? || ' HOUR')::INTERVAL) ORDER BY measurement_time DESC
 insert.measurement = INSERT INTO weather_observer.measurement (temperature, humidity, measurement_time) VALUES (?, ?, ?)
