--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ branches:
 
 language: java
 jdk: oraclejdk8
-services: mysql 
+services: postgresql 
 script: mvn clean package
 before_script: 
-        - echo "USE mysql;\nUPDATE user SET password=PASSWORD('root') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+	- psql -c "CREATE DATABASE testing_db;" -U postgres
+	- psql -c "CREATE USER postgres WITH PASSWORD 'postgres';" -U postgres
         - cd ./server/
 
