Fix PostgreSQL version in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,16 @@ branches:
 
 language: java
 jdk: oraclejdk8
-services: postgresql 
+services: postgresql
+addons:
+  postgresql: "9.6"
+env:
+  global:
+  - PGPORT=5432
 script: mvn clean package
-before_script: 
+before_script:
+        - bash install.sh
         - psql -c "CREATE DATABASE testing_db;" -U postgres
-        - psql -c "CREATE USER postgres WITH PASSWORD 'postgres';" -U postgres
+        - psql -c "ALTER USER postgres WITH PASSWORD 'postgres';" -U postgres
         - cd ./server/
 
