--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,7 @@
     "lint"
   ],
   "dependencies": {
-    "@amcharts/amcharts4": "^4.0.3",
+    "@amcharts/amcharts4": "4.0.11",
     "@angular-redux/router": "^9.0.0",
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "~7.0.0",
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "npm": "^6.4.1",
